# task-management-fastapi

./: .env  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  intructions.md  pyproject.toml
alembic/: env.py
alembic/versions/: c1f63748b376_initial_migration.py  xxxxxxxxxxxx_initial_migration.py
app/: main.py
app/api/: deps.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: __init__.py  auth.py  tasks.py  users.py
app/core/: config.py  logger.py  security.py
app/db/: init_db.py  session.py
app/models/: base.py  task.py  user.py
app/schemas/: task.py  user.py
app/services/: task_service.py
tests/test_api/test_v1/: test_tasks.py
