[tool.poetry]
name = "task-management-api"
version = "0.1.0"
description = "Task Management API similar to Lark"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.23.2"
sqlmodel = "^0.0.8"
pydantic = "^1.10.12"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.9"
email-validator = "^1.3.1"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
bcrypt = "^4.0.1"
starlette = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
httpx = "^0.25.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 